--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   </head>
   <body>
     <h1>roslelia 歌集</h1>
+      <p>目指すのは頂点、ただひとつよ。</p> 
       <ol>
         <li><a href="https://www.youtube.com/watch?v=snp_DT9EqiQ">Neo Aspect</a></li>
         <li><a href="https://www.youtube.com/watch?v=4SQfk7uoMjc">BRAVE JEWEL</a></li>
